<resources>
    <string name="app_name">CambridgeDictionary</string>

    <string name="type_word_here">type word here</string>
    <string name="search">search</string>
    <string name="synonyms">synonyms</string>
    <string name="more_example_sentences">more example sentences</string>

    <!-- fragment tags -->
    <string name="fragment_entry">Fragment Entry</string>
    <string name="fragment_synonym">Fragment Synonym</string>

    <!-- intent keys -->
    <string name="intent_message">intent_message</string>
    <string name="title_activity_synonym">SynonymActivity</string>
    <string name="bad_request_error">Bad Request</string>
    <string name="authentication_failed_error">Authentication failed</string>
    <string name="not_found_error">Not Found</string>
    <string name="request_uri_too_long_error">Request URI Too Long</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="bad_gateway_error">Bad Gateway</string>
    <string name="service_unavailable_error">Service Unavailable</string>
    <string name="gateway_timeout_error">Gateway timeout</string>
    <string name="server_is_currently_experiencing_issues_error">Server is currently experiencing issues</string>
    <string name="network_connection_lost_error">Network connection lost</string>
    <string name="unknown_error">unknown error</string>
    <string name="example_quotes">\'%1$s\'</string>
    <string name="player_error">cannot prepare player for playback</string>
    <string name="set_source_error">cannot set sourсe to play</string>
    <string name="menu">Menu</string>
    <string name="learned">Learned</string>
    <string name="all">All</string>
    <string name="_0">0</string>

    // Menu items
    <string name="menu_search">Поиск</string>
    <string name="menu_search_history">История поиска</string>
    <string name="menu_training">Тренировка</string>
    <string name="menu_saved">Избранное</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_author_about">Написать разработчику</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
