<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/MenuitemsGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:checked="true"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/search_history"
            android:icon="@drawable/ic_search_history_black_24dp"
            android:title="@string/menu_search_history" />
        <item
            android:id="@+id/training"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_training" />
        <item
            android:id="@+id/saved"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/author_about"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_author_about" />
    </group>
</menu>