<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".presentation.view.main.MainActivity"
    android:id="@+id/headerLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="25sp"/>
    <GridLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="fill"
            android:text="@string/learned"
            android:gravity="center"/>
        <TextView
            android:layout_gravity="center"
            android:text="@string/all"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/learnedWordsCount"
            android:text="@string/_0"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/allWordsCount"
            android:text="@string/_0"/>
    </GridLayout>

</LinearLayout>